--- a/src/widgets/NavMenu/ui/NevMenu.module.scss
+++ b/src/widgets/NavMenu/ui/NevMenu.module.scss
@@ -1,34 +1,13 @@
 .nav {
    padding: 20px 0;
    background-color: rgba(var(--color-gray), 0.06);
-   &__list {
-      display: flex;
-      gap: 40px;
-   }
-   &__item {
-      color: rgba(var(--color-gray), 0.6);
-   }
-   &__link {
-      padding-bottom: 10px;
-      position: relative;
-      transition: color ease-in-out 0.2s;
-   }
-   &__link::after {
-      content: '';
-      position: absolute;
-      bottom: 0;
-      left: 0;
-      width: 0;
-      height: 2px;
-      background-color: rgb(var(--color-accent));
-      transition: width ease-in-out 0.2s;
-   }
-   @media (any-hover: hover) {
-      &__link:hover {
-         color: rgb(var(--color-accent));
-         &::after {
-            width: 100%;
-         }
+   @media (width <=1024px) {
+      height: 0px;
+      padding: 0px;
+      overflow: hidden;
+      transition: all ease-in-out 0.2s;
+      &_active {
+         height: 510px;
       }
    }
 }
