--- a/src/app/styles/variables.scss
+++ b/src/app/styles/variables.scss
@@ -7,6 +7,7 @@
    --color-accent: 203, 14, 78;
    --color-danger: 220, 53, 69;
    --color-success: 40, 167, 69;
+   --color-rating: 255, 165, 52;
 
    --font-family: 'Roboto', sans-serif;
 
