--- a/src/entities/CartItem/ui/CartItem.module.scss
+++ b/src/entities/CartItem/ui/CartItem.module.scss
@@ -23,6 +23,7 @@
    }
    &__body {
       flex: 0 0 30%;
+      min-width: 200px;
    }
    &__title {
       margin-top: 7px;
@@ -40,5 +41,9 @@
       &__preview:hover {
          color: rgb(var(--color-primary));
       }
+   }
+   @media (width <= 1024px) {
+      flex-direction: column;
+      align-items: start;
    }
 }
