--- a/src/features/cart/CartCounter/ui/CartCounter.module.scss
+++ b/src/features/cart/CartCounter/ui/CartCounter.module.scss
@@ -25,4 +25,9 @@
          background-color: transparent;
       }
    }
+   &__output {
+      width: 16px;
+      display: flex;
+      justify-content: center;
+   }
 }
