--- a/src/widgets/BookInformation/ui/BookInformation.module.scss
+++ b/src/widgets/BookInformation/ui/BookInformation.module.scss
@@ -5,10 +5,13 @@
       display: flex;
       gap: 40px;
    }
+   &__header {
+      justify-content: space-between;
+   }
    &__authors {
       padding: 20px;
       align-self: start;
-      flex: 1 0 300px;
+      flex: 0 0 300px;
       background-color: rgba(var(--color-gray), 0.06);
       border-radius: var(--radius-default);
    }
