--- a/src/widgets/theFooter/ui/TheFooterColumns.module.scss
+++ b/src/widgets/theFooter/ui/TheFooterColumns.module.scss
@@ -1,18 +1,17 @@
-.footerColumns{
-    &__title{
-        margin-bottom: 10px;
-    }
-    &__list{
-        display: flex;
-        flex-direction: column;
-        flex-wrap: nowrap;
-        gap: 10px;
-        
-    }
-    &__item {
-        color: rgba(var(--color-gray), 0.6);
-        & a:hover {
-            color: rgb(var(--color-primary))
-        }
-    }
+.footerColumns {
+   &__title {
+      margin-bottom: 10px;
+   }
+   &__list {
+      display: flex;
+      flex-direction: column;
+      flex-wrap: nowrap;
+      gap: 10px;
+   }
+   &__item {
+      color: rgba(var(--color-gray), 0.6);
+      & a:hover {
+         color: rgb(var(--color-primary));
+      }
+   }
 }
