--- a/src/widgets/Slider/ui/Slider.module.scss
+++ b/src/widgets/Slider/ui/Slider.module.scss
@@ -1,12 +1,8 @@
 .slider {
-   &__info {
+   &Info {
       display: flex;
       flex-direction: row;
       justify-content: space-between;
-      &__title {
-         font-size: 24px;
-         color: rgba(var(--color-gray));
-      }
    }
    &__wrapper {
       width: 200px;
