--- a/src/shared/ui/MyButton/MyButton.module.scss
+++ b/src/shared/ui/MyButton/MyButton.module.scss
@@ -1,4 +1,4 @@
-.button {
+.myButton {
    padding: 10px 16px;
    color: rgba(var(--color-gray), 0.6);
    border: 1px solid rgba(var(--color-gray), 0.6);
