--- a/src/shared/ui/MyField/MyField.module.scss
+++ b/src/shared/ui/MyField/MyField.module.scss
@@ -1,4 +1,4 @@
-.field {
+.myField {
    padding: 10px 16px;
    border: 1px solid rgba(var(--color-gray), 0.6);
    border-radius: var(--radius-default);
