--- a/src/widgets/Slider/ui/Slider.module.scss
+++ b/src/widgets/Slider/ui/Slider.module.scss
@@ -1,10 +1,38 @@
 .slider {
    &Info {
       display: flex;
-      flex-direction: row;
       justify-content: space-between;
    }
    &__wrapper {
+      position: relative;
+   }
+   &__body {
       width: 200px;
+   }
+   &__navigation {
+      position: absolute;
+      top: 50%;
+      z-index: 1;
+      &_prev {
+         left: -10px;
+         rotate: 180deg;
+         transform: translateY(50%);
+      }
+      &_next {
+         right: -10px;
+         transform: translateY(-50%);
+      }
+   }
+   &__arrow {
+      width: 40px;
+      height: 50px;
+      fill: rgba(var(--color-gray), 0.4);
+   }
+   @media (any-hover: hover) {
+      &__navigation:hover {
+         .slider__arrow {
+            fill: rgb(var(--color-primary));
+         }
+      }
    }
 }
