feature-24: added preloader to AppLayout

--- a/src/widgets/Slider/ui/Slider.module.scss
+++ b/src/widgets/Slider/ui/Slider.module.scss
@@ -10,3 +10,10 @@
       width: 200px;
    }
 }
+
+.preloader {
+   height: 340px;
+   display: flex;
+   align-items: center;
+   justify-content: center;
+}
