--- a/src/shared/ui/Preloader/Preloader.module.scss
+++ b/src/shared/ui/Preloader/Preloader.module.scss
@@ -2,7 +2,7 @@
    width: 48px;
    height: 48px;
    display: inline-block;
-   border: 5px solid rgba(var(--color-gray), 0.3);
+   border: 5px solid var(--border-color);
    border-bottom-color: rgb(var(--color-primary));
    border-radius: 50%;
    animation: rotation 1s linear infinite;
