--- a/src/widgets/BookInformation/ui/BookInformation.module.scss
+++ b/src/widgets/BookInformation/ui/BookInformation.module.scss
@@ -9,7 +9,7 @@
       padding: 20px;
       align-self: start;
       flex: 1 0 300px;
-      background-color: rgba(var(--color-gray), 0.06);
+      background-color: var(--background-navigation-color);
       border-radius: var(--radius-default);
    }
 }
