--- a/src/entities/Developer/ui/Developer.module.scss
+++ b/src/entities/Developer/ui/Developer.module.scss
@@ -19,7 +19,6 @@
    &__info {
       justify-content: center;
       gap: 10px;
-      color: rgba(var(--color-gray), 0.9);
    }
    &__name {
       font-size: var(--font-s-title-large);
@@ -41,14 +40,13 @@
       svg {
          width: 100%;
          height: 100%;
-         fill: rgba(var(--color-gray), 0.8);
+         fill: var(--text-color);
       }
    }
    &__link {
       display: flex;
       align-items: center;
       gap: 10px;
-      color: rgba(var(--color-gray), 0.8);
    }
    @media (any-hover: hover) {
       &__link:hover {
