--- a/src/entities/book/BookPreview/ui/BookPreview.module.scss
+++ b/src/entities/book/BookPreview/ui/BookPreview.module.scss
@@ -22,7 +22,6 @@
       flex-direction: column;
       justify-content: space-between;
    }
-
    &__title,
    &__subtitle {
       width: 100%;
@@ -50,7 +49,7 @@
       gap: 4px;
       position: absolute;
       bottom: -100%;
-      background-color: rgb(var(--color-light));
+      background-color: var(--background-color);
       overflow: hidden;
       transition: 0.4s ease;
    }
