--- a/src/features/cart/AddToCart/ui/AddToCart.module.scss
+++ b/src/features/cart/AddToCart/ui/AddToCart.module.scss
@@ -1,5 +1,5 @@
 .button {
-   color: rgba(var(--color-gray), 0.6);
+   color: var(--text-color);
    &__wrapper {
       display: flex;
       align-items: center;
@@ -9,7 +9,7 @@
    &__icon {
       width: 18px;
       height: 18px;
-      fill: rgba(var(--color-gray), 0.6);
+      fill: var(--text-color);
    }
    &_added {
       color: rgb(var(--color-light));
