--- a/src/shared/ui/Burger/Burger.module.scss
+++ b/src/shared/ui/Burger/Burger.module.scss
@@ -6,13 +6,13 @@
    flex-direction: column;
    align-items: start;
    justify-content: space-between;
-   border: 1px solid rgba(var(--color-gray), 0.6);
+   border: 1px solid var(--border-color);
    border-radius: var(--radius-default);
    cursor: pointer;
    &__line {
       height: 2px;
       width: 100%;
-      background-color: rgba(var(--color-gray), 0.6);
+      background-color: var(--text-color);
       transition: width ease-in-out 0.2s;
       &:first-child {
          width: 75%;
