--- a/src/shared/ui/MyButton/MyButton.module.scss
+++ b/src/shared/ui/MyButton/MyButton.module.scss
@@ -1,7 +1,7 @@
 .myButton {
    padding: 10px 16px;
-   color: rgba(var(--color-gray), 0.6);
-   border: 1px solid rgba(var(--color-gray), 0.6);
+   color: var(--text-color);
+   border: 1px solid var(--border-color);
    border-radius: var(--radius-default);
    transition: all ease-in-out 0.2s;
    @media (any-hover: hover) {
