--- a/src/shared/ui/MyField/MyField.module.scss
+++ b/src/shared/ui/MyField/MyField.module.scss
@@ -1,6 +1,7 @@
 .myField {
    padding: 10px 16px;
-   border: 1px solid rgba(var(--color-gray), 0.6);
+   color: var(--text-color);
+   border: 1px solid var(--border-color);
    border-radius: var(--radius-default);
    transition: border-color ease-in-out 0.2s;
    &::placeholder {
