--- a/src/widgets/Cart/ui/Cart.module.scss
+++ b/src/widgets/Cart/ui/Cart.module.scss
@@ -3,8 +3,7 @@
    display: flex;
    flex-direction: column;
    gap: 40px;
-   color: rgba(var(--color-gray), 0.8);
-   border: 1px solid rgba(var(--color-gray), 0.2);
+   border: 1px solid var(--border-color);
    border-radius: var(--radius-default);
    &__list {
       display: flex;
@@ -13,7 +12,7 @@
    }
    &__item {
       padding-bottom: 20px;
-      border-bottom: 1px solid rgba(var(--color-gray), 0.2);
+      border-bottom: 1px solid var(--border-color);
    }
    &__title,
    &__footer {
