--- a/src/widgets/theFooter/ui/TheFooter.module.scss
+++ b/src/widgets/theFooter/ui/TheFooter.module.scss
@@ -1,6 +1,6 @@
 .footer {
    padding: 40px 0;
-   background-color: rgba(var(--color-gray), 0.06);
+   background-color: var(--background-navigation-color);
    &__container {
       display: flex;
       flex-direction: row;
