fix-17: added space before AddToCart

--- a/src/entities/book/BookPreview/ui/BookPreview.module.scss
+++ b/src/entities/book/BookPreview/ui/BookPreview.module.scss
@@ -54,6 +54,7 @@
       transition: 0.4s ease;
    }
    &__button {
+      margin-top: 10px;
       align-self: flex-end;
    }
    @media (any-hover: hover) {
