--- a/src/app/layout/AppLayout.module.scss
+++ b/src/app/layout/AppLayout.module.scss
@@ -2,6 +2,12 @@
    min-height: 100%;
    display: flex;
    flex-direction: column;
+   &__navigation {
+      position: sticky;
+      top: 0;
+      left: 0;
+      z-index: 10;
+   }
    &__main {
       flex: 1 1 auto;
    }
