fix-19: fix BookPreview style

--- a/src/widgets/Slider/ui/Slider.module.scss
+++ b/src/widgets/Slider/ui/Slider.module.scss
@@ -5,10 +5,7 @@
       justify-content: space-between;
    }
    &__wrapper {
-      position: relative;
-   }
-   &__body {
-      width: 200px;
+      height: 348px;
    }
 }
 
