--- a/src/entities/book/BookPreview/ui/BookPreview.module.scss
+++ b/src/entities/book/BookPreview/ui/BookPreview.module.scss
@@ -18,6 +18,12 @@
       max-width: 238px;
    }
    &__body {
+      height: 100%;
+      display: flex;
+      flex-direction: column;
+   }
+   &__text {
+      flex: 1 0 auto;
       display: flex;
       flex-direction: column;
       justify-content: space-between;
@@ -47,9 +53,9 @@
       display: flex;
       flex-direction: column;
       gap: 4px;
+      background-color: var(--background-color);
       position: absolute;
       bottom: -100%;
-      background-color: var(--background-color);
       overflow: hidden;
       transition: 0.4s ease;
    }
