--- a/src/shared/ui/SliderController/SliderController.module.scss
+++ b/src/shared/ui/SliderController/SliderController.module.scss
@@ -12,15 +12,15 @@
    &__arrow {
       width: 40px;
       height: 50px;
-      fill: rgb(var(--color-light));
+      stroke: rgb(var(--color-light));
       &_alternative {
-         fill: rgba(var(--color-gray), 0.4);
+         stroke: rgba(var(--color-gray), 0.4);
       }
    }
    @media (any-hover: hover) {
       &:hover {
          .controller__arrow {
-            fill: rgb(var(--color-primary));
+            stroke: rgb(var(--color-primary));
          }
       }
    }
