--- a/src/widgets/BookInformation/ui/BookInformation.module.scss
+++ b/src/widgets/BookInformation/ui/BookInformation.module.scss
@@ -9,9 +9,9 @@
       justify-content: space-between;
    }
    &__authors {
-      padding: 20px;
+      padding: 20px 20px 30px;
       align-self: start;
-      flex: 1 0 300px;
+      flex: 0 0 300px;
       background-color: var(--background-navigation-color);
       border-radius: var(--radius-default);
    }
