fix-21: fixed BredCrumbs

--- a/src/shared/ui/BredCrumbs/BredCrumbs.module.scss
+++ b/src/shared/ui/BredCrumbs/BredCrumbs.module.scss
@@ -18,6 +18,8 @@
       }
    }
    &__link {
+      text-transform: capitalize;
+      cursor: pointer;
       &:hover {
          color: rgb(var(--color-primary));
       }
