--- a/src/entities/book/BookPreview/ui/BookPreview.module.scss
+++ b/src/entities/book/BookPreview/ui/BookPreview.module.scss
@@ -1,5 +1,5 @@
 .bookPreview {
-   width: 238px;
+   width: 100%;
    height: 100%;
    position: relative;
    overflow: hidden;
@@ -46,7 +46,7 @@
       color: rgb(var(--color-accent));
    }
    &__popup {
-      width: 238px;
+      width: 100%;
       height: 170px;
       margin: 0 auto;
       padding: 10px;
