--- a/src/widgets/search/SearchList/ui/SearchList.module.scss
+++ b/src/widgets/search/SearchList/ui/SearchList.module.scss
@@ -1,7 +1,25 @@
 .searchList {
-   display: grid;
-   justify-content: flex-start;
-   grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-   grid-template-rows: repeat(auto);
-   gap: 30px;
+   min-height: 80vh;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   flex-direction: column;
+   gap: 40px;
+   &__list {
+      width: 100%;
+      display: grid;
+      justify-content: flex-start;
+      grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+      grid-template-rows: repeat(auto);
+      gap: 30px;
+   }
+   &__pagination {
+      margin: 0 auto;
+   }
+   &__preloader {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      height: 100%;
+   }
 }
