--- a/src/widgets/search/SearchInfo/ui/SearchInfo.module.scss
+++ b/src/widgets/search/SearchInfo/ui/SearchInfo.module.scss
@@ -1,9 +1,9 @@
-.searchInfo{
-    &__text{
-        font-size: var(--font-s-title-large);
-        color: rgb(var(--color-gray), 0.6);
-        &_span{
-            color: rgba(var(--color-primary));
-        }
-    }
+.searchInfo {
+   &__text {
+      font-size: var(--font-s-title-large);
+      color: var(--text-color);
+      &_span {
+         color: rgba(var(--color-primary));
+      }
+   }
 }
