--- a/src/entities/book/BookPreview/ui/BookPreview.module.scss
+++ b/src/entities/book/BookPreview/ui/BookPreview.module.scss
@@ -2,7 +2,9 @@
    width: 100%;
    height: 100%;
    position: relative;
-   overflow: hidden;
+   display: flex;
+   flex-direction: column;
+   justify-content: center;
    &_free::before {
       content: 'FREE';
       padding: 10px;
@@ -44,20 +46,6 @@
    &__price {
       font-size: var(--font-s-title-large);
       color: rgb(var(--color-accent));
-   }
-   &__popup {
-      width: 100%;
-      height: 170px;
-      margin: 0 auto;
-      padding: 10px;
-      display: flex;
-      flex-direction: column;
-      gap: 4px;
-      background-color: var(--background-color);
-      position: absolute;
-      bottom: -100%;
-      overflow: hidden;
-      transition: 0.4s ease;
    }
    &__button {
       margin-top: 10px;
