fix-26: changed global styles in TheFooterColumns for title

--- a/src/app/styles/global.scss
+++ b/src/app/styles/global.scss
@@ -44,3 +44,7 @@ body {
 .swiper-pagination-bullet-active {
    background: rgb(var(--color-primary));
 }
+
+.title {
+   color: var(--title-color)
+}
