--- a/src/app/styles/variables.scss
+++ b/src/app/styles/variables.scss
@@ -29,6 +29,7 @@
 
 body[data-theme='light'] {
    --text-color: rgba(var(--color-gray), 0.8);
+   --title-color: rgb(var(--color-accent));
    --border-color: rgba(var(--color-gray), 0.4);
    --background-color: rgb(var(--color-light));
    --background-navigation-color: rgb(var(--color-light-gray));
@@ -37,6 +38,7 @@ body[data-theme='light'] {
 
 body[data-theme='dark'] {
    --text-color: rgba(var(--color-light), 0.8);
+   --title-color: rgb(var(--color-primary));
    --border-color: rgba(var(--color-light), 0.4);
    --background-color: rgb(var(--color-dark));
    --background-navigation-color: rgb(var(--color-dark-gray));
