fix-25: fixed NavMenu, BooksCategory and Pagination

--- a/src/widgets/BooksCategory/ui/BooksCategory.module.scss
+++ b/src/widgets/BooksCategory/ui/BooksCategory.module.scss
@@ -1,19 +1,22 @@
-.booksCategory{
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-}
-.list__link{
-    margin: 30px 0px;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: flex-start;
-    gap: 50px;
-}
-.link__item{
-    font-size: var(--font-s-title-default);
-    &:hover {
-        color: rgb(var(--color-primary));
-    }
+.booksCategory {
+   display: flex;
+   flex-direction: column;
+   gap: 20px;
+   &__list {
+      margin: 30px 0px;
+      display: flex;
+      flex-direction: row;
+      flex-wrap: wrap;
+      justify-content: flex-start;
+      gap: 50px;
+   }
+   &__link {
+      font-size: var(--font-s-title-default);
+      transition: color ease 0.2s;
+      @media (any-hover: hover) {
+         &:hover {
+            color: rgb(var(--color-primary));
+         }
+      }
+   }
 }
