--- a/src/entities/CartItem/ui/CartItem.module.scss
+++ b/src/entities/CartItem/ui/CartItem.module.scss
@@ -26,6 +26,7 @@
       min-width: 200px;
    }
    &__title {
+      max-width: 300px;
       margin-top: 7px;
       font-size: var(--font-s-title-default);
    }
