--- a/src/app/layout/AppLayout.module.scss
+++ b/src/app/layout/AppLayout.module.scss
@@ -3,19 +3,18 @@
    display: flex;
    flex-direction: column;
    &__navigation {
-      position: sticky;
-      top: 0;
-      left: 0;
-      z-index: 10;
+      @media (width >= 1024px) {
+         position: sticky;
+         top: 0;
+         left: 0;
+         z-index: 10;
+      }
    }
    &__main {
-      flex: 1 1 auto;
-   }
-   &__preloader {
-      height: 80vh;
+      padding: 20px 0;
       display: flex;
       align-items: center;
-      justify-content: center;
+      flex: 1 1 auto;
    }
    &__theme {
       position: fixed;
