--- a/src/app/styles/global.scss
+++ b/src/app/styles/global.scss
@@ -27,17 +27,19 @@ body {
 }
 
 .preloader {
-   height: 80vh;
+   flex-basis: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
 }
 
 .container {
+   width: 100%;
    max-width: 1232px;
    margin: 0 auto;
    padding: 0 16px;
 }
+
 .swiper-pagination-bullet {
    background: var(--swiper-pagination-background-color);
 }
@@ -46,5 +48,5 @@ body {
 }
 
 .title {
-   color: var(--title-color)
+   color: var(--title-color);
 }
