--- a/src/pages/main-page/ui/MainPage.module.scss
+++ b/src/pages/main-page/ui/MainPage.module.scss
@@ -1,9 +1,15 @@
-.mainPage{
-    margin: 30px 0;
-    &__sliders{
-        padding: 60px 0;
-        display: flex;
-        flex-direction: column;
-        gap: 50px;
-    }
+.mainPage {
+   flex-basis: 100%;
+   width: 100%;
+   &__banner {
+      width: 100%;
+   }
+   &__container {
+   }
+   &__sliders {
+      padding: 60px 0;
+      display: flex;
+      flex-direction: column;
+      gap: 50px;
+   }
 }
