--- a/src/widgets/Banner/ui/Banner.module.scss
+++ b/src/widgets/Banner/ui/Banner.module.scss
@@ -6,6 +6,11 @@
       width: 100%;
    }
    &__img {
+      height: 100%;
+   }
+   &__link {
+      display: block;
+      max-height: 370px;
       object-fit: cover;
    }
 }
