fix-30: changed the links and style in TheFooterColumns

--- a/src/widgets/theFooter/ui/TheFooterColumns.module.scss
+++ b/src/widgets/theFooter/ui/TheFooterColumns.module.scss
@@ -8,9 +8,11 @@
       flex-wrap: nowrap;
       gap: 10px;
    }
-   &__item {
-      & a:hover {
-         color: rgb(var(--color-primary));
+   @media (any-hover: hover) {
+      &__item {
+         & a:hover {
+            color: rgb(var(--color-primary));
+         }
       }
    }
 }
