--- a/src/widgets/NavMenu/ui/NavList.module.scss
+++ b/src/widgets/NavMenu/ui/NavList.module.scss
@@ -31,7 +31,7 @@
          }
       }
    }
-   @media (width <= 1024px) {
+   @media (min-width: 1024px) {
       flex-direction: column;
       align-items: center;
       justify-content: center;
