--- a/src/app/layout/AppLayout.module.scss
+++ b/src/app/layout/AppLayout.module.scss
@@ -3,7 +3,7 @@
    display: flex;
    flex-direction: column;
    &__navigation {
-      @media (width >= 1024px) {
+      @media (min-width: 1024px) {
          position: sticky;
          top: 0;
          left: 0;
