--- a/src/entities/book/BookDetails/ui/BookDetails.module.scss
+++ b/src/entities/book/BookDetails/ui/BookDetails.module.scss
@@ -40,7 +40,7 @@
    &__value {
       color: rgb(var(--color-accent));
    }
-   @media (width <= 1024px) {
+   @media (max-width: 1024px) {
       flex-direction: column;
       align-items: center;
    }
