--- a/src/shared/ui/Pagination/Pagination.module.scss
+++ b/src/shared/ui/Pagination/Pagination.module.scss
@@ -21,5 +21,16 @@
          background-color: rgb(var(--color-primary));
          border-color: rgb(var(--color-primary));
       }
+      &:disabled {
+         opacity: .5;
+      }
+   }
+   &__controllers {
+      display: flex;
+      gap: 20px;
+   }
+   @media (max-width: 768px) {
+      align-items: center;
+      flex-direction: column;
    }
 }
