--- a/src/app/layout/AppLayout.module.scss
+++ b/src/app/layout/AppLayout.module.scss
@@ -16,10 +16,14 @@
       align-items: center;
       flex: 1 1 auto;
    }
-   &__theme {
+   &__switcher {
       position: fixed;
       bottom: 40px;
       right: 40px;
       z-index: 100;
+      @media (max-width: 1024px) {
+         bottom: 10px;
+         right: 10px;
+      }
    }
 }
